@@ -6,18 +6,46 @@ import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Test;
 
+import br.com.fatec.sistemarestaurante.api.dao.IngredienteDAO;
 import br.com.fatec.sistemarestaurante.api.dao.ItemIngredienteDAO;
+import br.com.fatec.sistemarestaurante.api.dao.ProdutoDAO;
+import br.com.fatec.sistemarestaurante.api.entity.Ingrediente;
 import br.com.fatec.sistemarestaurante.api.entity.ItemIngrediente;
+import br.com.fatec.sistemarestaurante.api.entity.Produto;
 import br.com.fatec.sistemarestaurante.test.commons.TestBase;
 import br.com.spektro.minispring.core.implfinder.ImplFinder;
 
 public class ItemIngredienteDAOTest extends TestBase {
 
 	private ItemIngredienteDAO dao;
+	private ProdutoDAO produtoDao;
+	private IngredienteDAO ingredienteDao;
+	
+	private Produto produto;
+	private Ingrediente ingrediente;
+	
 	
 	@Before
 	public void config(){
 		this.dao = ImplFinder.getImpl(ItemIngredienteDAO.class);
+		this.produtoDao = ImplFinder.getImpl(ProdutoDAO.class);
+		this.ingredienteDao = ImplFinder.getImpl(IngredienteDAO.class);
+		/**
+		 * Configura o Ingrediente base para os testes
+		 */
+		ingrediente = new Ingrediente();
+		ingrediente.setDescricao("Pão");
+		ingrediente.setId(this.ingredienteDao.save(ingrediente));
+		
+		/**
+		 * Configura o produto base para os testes:
+		 */
+		
+		produto = new Produto();
+		produto.setDescricao("X-Salada");
+		produto.setStatus("Disponivel");
+		produto.setPreco(8.50);
+		produto.setId(this.produtoDao.save(produto));
 	}
 	
 	@Test
@@ -25,19 +53,20 @@ public class ItemIngredienteDAOTest extends TestBase {
 
 		ItemIngrediente itemIngredienteSalvar = new ItemIngrediente();
 		
-		itemIngredienteSalvar.setProdId((long) 1);
+		itemIngredienteSalvar.setProduto(produto);
 		itemIngredienteSalvar.setQuantidade(10);
-		itemIngredienteSalvar.setIngredId((long) 1);		
+		itemIngredienteSalvar.setIngrediente(ingrediente);		
+		
 		this.dao.save(itemIngredienteSalvar);
 		
-		/** CONTINUAR ESSE METODO APOS IMPLEMENTAR OS OUTROS BÁSICOS
+		ItemIngrediente itemIngredienteSalvo = new ItemIngrediente();
+		itemIngredienteSalvo = this.dao.findByIds(itemIngredienteSalvar.getProduto().getId(), itemIngredienteSalvar.getIngrediente().getId());
 		
-		ItemIngrediente ItemIngredienteSalvo = this.dao.findByIds((long) 1, long(1));
+		Assert.assertNotNull(itemIngredienteSalvo);
+		Assert.assertEquals(itemIngredienteSalvar.getProduto().getId(), itemIngredienteSalvo.getProduto().getId());
+		Assert.assertEquals(itemIngredienteSalvar.getIngrediente().getId(), itemIngredienteSalvo.getIngrediente().getId());
+		Assert.assertEquals(new Integer(10), itemIngredienteSalvo.getQuantidade());
 		
-		Assert.assertNotNull(ItemIngredienteSalvo);
-		Assert.assertEquals(Long.valueOf(1), ItemIngredienteSalvo.getProdId());
-		Assert.assertEquals(Integer.valueOf(10), ItemIngredienteSalvo.getQuantidade());
-		**/
 		
 	}
 	
@@ -45,51 +74,88 @@ public class ItemIngredienteDAOTest extends TestBase {
 	public void testUpdate(){
 		ItemIngrediente itemIngredienteSalvar = new ItemIngrediente();
 		
-		itemIngredienteSalvar.setProdId(Long.valueOf(1));
+		itemIngredienteSalvar.setProduto(produto);
 		itemIngredienteSalvar.setQuantidade(10);
-				
-		Long id = this.dao.save(itemIngredienteSalvar);
+		itemIngredienteSalvar.setIngrediente(ingrediente);		
 		
-		ItemIngrediente itemIngredienteAtualizar = this.dao.findById(id);
+		this.dao.save(itemIngredienteSalvar);
 		
-		itemIngredienteAtualizar.setProdId(Long.valueOf(2));
+		
+		ItemIngrediente itemIngredienteAtualizar = this.dao.findByIds(itemIngredienteSalvar.getProduto().getId(), itemIngredienteSalvar.getIngrediente().getId());
+		
 		itemIngredienteAtualizar.setQuantidade(17);
 		
 		this.dao.update(itemIngredienteAtualizar);
 		
-		ItemIngrediente itemIngredienteAtualizado = this.dao.findById(id);
+		ItemIngrediente itemIngredienteAtualizado = this.dao.findByIds(itemIngredienteAtualizar.getProduto().getId(), itemIngredienteAtualizar.getIngrediente().getId());
 				
 		Assert.assertNotNull(itemIngredienteAtualizado);
-		Assert.assertEquals(Long.valueOf(2), itemIngredienteAtualizado.getProdId());
-		Assert.assertEquals(Integer.valueOf(17), itemIngredienteAtualizado.getQuantidade());
+		Assert.assertEquals(new Integer(17), itemIngredienteAtualizado.getQuantidade());
+		
 	}
 	
 	@Test
 	public void testDelete(){
-ItemIngrediente itemIngredienteSalvar = new ItemIngrediente();
 		
-		itemIngredienteSalvar.setProdId(Long.valueOf(1));
+		ItemIngrediente itemIngredienteSalvar = new ItemIngrediente();
+		
+		itemIngredienteSalvar.setProduto(produto);
 		itemIngredienteSalvar.setQuantidade(10);
-				
-		Long id = this.dao.save(itemIngredienteSalvar);
+		itemIngredienteSalvar.setIngrediente(ingrediente);		
 		
-		this.dao.delete(id);
+		this.dao.save(itemIngredienteSalvar);
 		
-		ItemIngrediente itemIngredienteDeletado = this.dao.findById(id);
+		this.dao.delete(produto.getId(), ingrediente.getId());
 		
+		ItemIngrediente itemIngredienteDeletado = this.dao.findByIds(produto.getId(), ingrediente.getId());		
 		Assert.assertNull(itemIngredienteDeletado);
 	}
+	
+	@Test
+	public void testFindByProduto(){
+		
+		ItemIngrediente itemIngredienteSalvar = new ItemIngrediente();
+		
+		itemIngredienteSalvar.setProduto(produto);
+		itemIngredienteSalvar.setQuantidade(10);
+		itemIngredienteSalvar.setIngrediente(ingrediente);		
+				
+		this.dao.save(itemIngredienteSalvar);
+		Ingrediente ingrediente2 = new Ingrediente();
+		ingrediente2.setDescricao("Coca-Cola");
+		ingrediente2.setId(this.ingredienteDao.save(ingrediente2));
+		
+		itemIngredienteSalvar.setIngrediente(ingrediente2);
+		itemIngredienteSalvar.setQuantidade(4);
+		
+		this.dao.save(itemIngredienteSalvar);
+
+		List<ItemIngrediente> encontrados = this.dao.findByProduto(produto.getId());
+		
+		Assert.assertEquals(2, encontrados.size());
+		Assert.assertEquals(ingrediente.getId(), encontrados.get(0).getIngrediente().getId());
+		Assert.assertEquals(produto.getId(), encontrados.get(0).getProduto().getId());
+		Assert.assertEquals(new Integer(10), encontrados.get(0).getQuantidade());
+		
+		Assert.assertEquals(ingrediente2.getId(), encontrados.get(1).getIngrediente().getId());
+		Assert.assertEquals(produto.getId(), encontrados.get(1).getProduto().getId());
+		Assert.assertEquals(new Integer(4), encontrados.get(1).getQuantidade());
+		
+	}
+	
 	
 	@Test
 	public void testFindAll(){
 		ItemIngrediente ingred1 = new ItemIngrediente();
 		ItemIngrediente ingred2 = new ItemIngrediente();
 		
-		ingred1.setProdId(Long.valueOf(1));
+		ingred1.setProduto(produto);
 		ingred1.setQuantidade(10);
-				
-		ingred2.setProdId(Long.valueOf(2));
-		ingred2.setQuantidade(17);;
+		ingred1.setIngrediente(ingrediente);		
+		
+		ingred2.setProduto(produto);
+		ingred2.setQuantidade(17);
+		ingred2.setIngrediente(ingrediente);	
 		
 		this.dao.save(ingred1);
 		this.dao.save(ingred2);
@@ -97,11 +163,13 @@ ItemIngrediente itemIngredienteSalvar = new ItemIngrediente();
 		List<ItemIngrediente> encontrados = this.dao.findAll();
 		
 		Assert.assertEquals(2, encontrados.size());
-		Assert.assertEquals(Long.valueOf(1), encontrados.get(0).getProdId());
-		Assert.assertEquals(Integer.valueOf(10), encontrados.get(0).getQuantidade());
+		Assert.assertEquals(produto.getId(), encontrados.get(0).getProduto().getId());
+		Assert.assertEquals(ingrediente.getId(), encontrados.get(0).getIngrediente().getId());
+		Assert.assertEquals(new Integer(10), encontrados.get(0).getQuantidade());
 		
-		Assert.assertEquals(Long.valueOf(2), encontrados.get(1).getProdId());
-		Assert.assertEquals(Integer.valueOf(17), encontrados.get(1).getQuantidade());
+		Assert.assertEquals(produto.getId(), encontrados.get(1).getProduto().getId());
+		Assert.assertEquals(ingrediente.getId(), encontrados.get(1).getIngrediente().getId());
+		Assert.assertEquals(new Integer(17), encontrados.get(1).getQuantidade());
 		
 	}
 }
